login and signup working efficiently

--- a/client/auth/src/index.css
+++ b/client/auth/src/index.css
@@ -19,3 +19,22 @@
 .alert{
   margin-bottom: 2.3rem;
 }
+
+/* profile-card */
+.profile-card {
+  width: 500px;
+}
+
+.avatar{
+  margin-bottom: 1.5rem;
+}
+
+.username{
+  text-transform: capitalize;
+}
+
+.profile-btn{
+  margin-top: 1.3rem;
+  width: 100%;
+}
+  
